--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "webpack": "^3.5.6",
     "webpack-dev-middleware": "^1.12.0"
   },
@@ -27,7 +28,6 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
-    "nodemon": "^1.12.0"
+    "eslint-plugin-react": "^7.3.0"
   }
 }
