--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "materialize-css": "^0.100.2",
+    "materialize-loader": "^2.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "socket.io": "^2.0.3",
@@ -28,6 +30,8 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-plugin-react": "^7.3.0",
+    "file-loader": "^0.11.2",
+    "url-loader": "^0.5.9"
   }
 }
